--- a/src/components/pages/Editor/Editor.scss
+++ b/src/components/pages/Editor/Editor.scss
@@ -30,5 +30,5 @@ $color-appbar-background: $color-brand-primary;
 		}
 
 		.editor-document-content {
-			flex: 1 0 auto;
+			flex: 1 0 0;
 		}
